--- a/dj_after/src/index.css
+++ b/dj_after/src/index.css
@@ -1,3 +1,4 @@
+/* ----------------------------navbar style---------------------------------------- */
 a {
   color: aqua;
   /* font-family: url('https://fonts.googleapis.com/css?family=Share+Tech+Mono'); */
@@ -50,9 +51,7 @@ a:hover{
   color: aqua;
   font-family: 'LasEnter';
   margin: auto;
-  /* width: 100%;
-  float: left; */
-}
+ } 
 #navitem2{
   font-size: 50px;
   border-right-style: double;
@@ -71,6 +70,7 @@ a:hover{
   min-height: 100%;
   z-index: -1;
 }
+/* --------------------------playlist style----------------------------------- */
 #createplaylist{
   float: left;
   width:  60%;
@@ -111,6 +111,222 @@ a:hover{
   font-size: 20px;
   text-align: center;
 }
+
+/* -----------------log in style------------------------------------------- */
+p{
+  color: #f705ae;
+}
+h3{
+  color: #f705ae;
+  font-family: 'LasEnter';
+}
+h4{
+  color: #f705ae;
+  font-family: 'LasEnter';
+  font-size: 32px;
+}
+body#LoginForm{ 
+  background-image:url("images/djShareLogin.jpg"); 
+  background-repeat:no-repeat; 
+  background-position:center; 
+  background-size:cover; 
+  padding:10px;
+}
+.form-heading { 
+  color:#f705ae; font-size:23px;
+  font-family: 'LasEnter';
+  font-size: 70px;
+}
+.panel h2{ color:#f705ae; font-size:18px; margin:0 0 8px 0;}
+.panel p { color:#f705ae; font-size:14px; margin-bottom:30px; line-height:24px;}
+.login-form .form-control {
+background: rgba(85, 1, 110, 0.651) none repeat scroll 0 0;
+border: 1px solid #f705ae;
+color: #f705ae;
+border-radius: 4px;
+font-size: 14px;
+height: 50px;
+line-height: 50px;
+}
+#main {
+background: rgba(85, 1, 110, 0.651) none repeat scroll 0 0;
+border-radius: 20px;
+margin: 10px auto 20px;
+width: 28rem;
+padding: 50px 70px 70px 70px;
+border-color: #f705ae;
+border-style: solid;
+border-width: 2px;
+}
+
+.login-form .form-group {
+margin-bottom:10px;
+}
+.login-form{ text-align:center;}
+.loginOptions a {
+color: #f705ae;
+font-size: 14px;
+text-decoration: underline;
+}
+.login-form  .btn.btn-primary {
+background: rgba(85, 1, 110, 0.951) none repeat scroll 0 0;
+border-color: #f705ae;
+color: #f705ae;
+font-size: 14px;
+width: 100%;
+height: 50px;
+line-height: 50px;
+padding: 0;
+}
+.forgot {
+  float: left; margin-bottom:30px;
+}
+.signUp {
+  float: right;
+}
+
+/* Modal Style */
+.login-modal-body .close{
+  position: relative;
+  top: -45px;
+  left: 10px;
+  background-color: #130250;
+}
+.login-modal-body .close{
+  opacity:0.75;
+  color: #f705ae;
+}
+.modal-content{
+  background-color: #130250;
+}
+.login-modal-body .close:focus, .login-modal-body .close:hover {
+  color: #130250;
+  opacity: 1;
+  text-decoration: none;
+  outline:0;
+}
+
+.login-modal .modal-dialog .modal-content{
+  border-radius:0px;
+}
+
+/* form animation */
+.modal-login-form .form-group {
+  position: relative;
+  margin-bottom: 1.5em !important;
+}
+.modal-login-form .form-control{
+  border: 1px solid #f705ae !important;
+  border:1px solid #f705ae !important;
+  border-radius:0 !important;
+  background-color: #130250;
+  color: #f705ae;
+}
+.modal-login-form .form-control:focus, .modal-login-form .form-control:active{
+  outline:none !important;
+  outline-width: 0;
+  border-color: #f705ae !important;
+  box-shadow: 0 0 0 0.2rem transparent;
+}
+.modal-login-form{
+  padding: 2em 0 0;
+}
+.form-control-placeholder {
+  position: absolute;
+  top: 0;
+  padding: 7px 0 0 13px;
+  transition: all 200ms;
+  opacity: 0.5;
+  border-top: 0px;
+  border-left: 0;
+  border-right: 0;
+}
+.form-control:focus + .form-control-placeholder,
+.form-control:valid + .form-control-placeholder {
+  font-size: 75%;
+  -webkit-transform: translate3d(0, -100%, 0);
+  transform: translate3d(0, -100%, 0);
+  opacity: 1;
+}
+
+.btn-check-log .btn-check-login {
+  font-size: 16px;
+  padding: 10px 0;
+}
+button.btn-check-login:hover {
+  color: #f705ae;
+  background-color: #130250;
+  border: 2px solid #f705ae;
+}
+.btn-check-login {
+  color: #130250;
+  background-color: #f705ae;
+  border: 2px solid #130250;
+  transition: all ease-in-out .3s;
+}
+.exitBTN{
+  color: #130250;
+  background-color: #f705ae;
+  border: 2px solid #130250;
+}
+.btn-check-login {
+  display: inline-block;
+  padding: 12px 0;
+  margin-bottom: 0;
+  line-height: 1.42857143;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  -ms-touch-action: manipulation;
+  touch-action: manipulation;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  background-image: none;
+  border-radius: 0;
+  width: 100%;
+}
+.text-primary {
+  color: #1959a2;
+}
+.select-form-control-placeholder{
+font-size: 100%;
+padding: 7px 0 0 13px;
+margin: 0;
+}
+/* --------------------------------profile style--------------------------------- */
+#profile{
+  border-style: none;
+  margin-top: 40px;
+}
+#skills {
+  columns: 4;
+  width: 100%;
+  font-size: 10px;
+  padding-bottom: 40px;
+}
+
+.form-control, .modal-login-form, .form-control:focus, .modal-login-form, .form-control:active{
+  background-color: #f705ae;
+  color: rgba(0, 17, 255, 0.8);
+  border-style: solid;
+  border-color: aqua;
+  border-width: 2px;
+  font-family: none;
+}
+.btn {
+  color: #130250;
+  background-color: #f705ae;
+  border: 2px solid #130250;
+}
+.btn:hover {
+  color: #f705ae;
+  background-color: #130250;
+  border:  2px solid #f705ae;
+}
+
 
 
   @font-face 
